Add types to all Lists/Maps